Fixing overflow? for joinus divs

--- a/style.css
+++ b/style.css
@@ -124,6 +124,11 @@
     overflow: hidden;
 }
 
+.joinUsTop {
+
+    overflow:hidden;
+}
+
 .joinUsDescription {
 
     text-align: center;
